--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Virtual DOM suitable for websites.",
   "main": "index.js",
   "scripts": {
-    "test": "tape -r babel-core/register ./test/_utils/document.js test/*.js"
+    "test": "tape -r babel-core/register ./test/_utils/document.js test/*.js",
+    "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "url": "https://github.com/pori/bacharu",
@@ -17,7 +18,9 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-react-jsx": "^6.8.0",
     "babel-preset-es2015": "^6.18.0",
+    "coveralls": "^2.11.15",
     "jsdom": "^9.8.3",
+    "nyc": "^10.0.0",
     "tape": "^4.6.3"
   },
   "babel": {
