--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "bacharu",
   "version": "0.1.0",
   "description": "Virtual DOM suitable for websites.",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "jsnext:main": "dist/index.es2105.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "tape -r babel-core/register ./test/_utils/document.js test/*.js",
+    "prepublish": "npm run build:es2015 && npm run build:commonjs",
+    "build:es2015": "BABEL_ENV=es2015 babel index.js -o dist/index.es2015.js",
+    "build:commonjs": "BABEL_ENV=commonjs babel index.js -o dist/index.js",
+    "test": "NODE_ENV=test tape -r babel-core/register ./test/_utils/document.js test/*.js",
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
@@ -14,7 +21,7 @@
   "author": "A. Hernandez <porialex@gmail.com> (http://pori.io/)",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.18.2",
+    "babel-cli": "^6.18.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-react-jsx": "^6.8.0",
     "babel-preset-es2015": "^6.18.0",
@@ -24,12 +31,31 @@
     "tape": "^4.6.3"
   },
   "babel": {
-    "presets": [
-      "es2015"
-    ],
-    "plugins": [
-      "syntax-jsx",
-      "transform-react-jsx"
-    ]
+    "env": {
+      "es2015": {
+        "presets": [
+          [
+            "es2015",
+            {
+              "modules": false
+            }
+          ]
+        ]
+      },
+      "commonjs": {
+        "presets": [
+          "es2015"
+        ]
+      },
+      "test": {
+        "presets": [
+          "es2015"
+        ],
+        "plugins": [
+          "syntax-jsx",
+          "transform-react-jsx"
+        ]
+      }
+    }
   }
 }
